; ModuleID = '/home/carl/AnghaBench/vlc/test/src/player/extr_player.c_player_on_media_meta_changed.c'
source_filename = "/home/carl/AnghaBench/vlc/test/src/player/extr_player.c_player_on_media_meta_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctx = type { i32 }

@on_media_meta_changed = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i8*)* @player_on_media_meta_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @player_on_media_meta_changed(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.ctx*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = call %struct.ctx* @get_ctx(i32* %8, i8* %9)
  store %struct.ctx* %10, %struct.ctx** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @input_item_Hold(i32* %11)
  %13 = load i32, i32* @on_media_meta_changed, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @VEC_PUSH(i32 %13, i32* %14)
  ret void
}

declare dso_local %struct.ctx* @get_ctx(i32*, i8*) #1

declare dso_local i32 @input_item_Hold(i32*) #1

declare dso_local i32 @VEC_PUSH(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
